# somato

./: Cargo.toml  Readme.md  config_synth.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: joker.rs  lib.rs  location.rs  main.rs  member.rs  somajotr.rs  somato.rs  test_common.rs  tickoff.rs
tests/: basic.rs
tests/test_data/: jokers_synthetic.xlsx  members_synthetic.xlsx  tickoff_synthetic.xlsx
