[package]
name = "somajotr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
calamine = { version="0.31.0", features = ["chrono"]}
chrono = "0.4.42"
colorama = "1.0.0"
colored = "3.0.0"
lazy-regex = "3.4.2"
regex = "1.12.2"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
